# ETCS-ORC-mirror

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  balises.json
cmake/: FindMOSQUITTO.cmake
openrails-modification/: ORC_endpoint_for_OpenRails.patch  README.md
src/: main.cpp
src/Configurations/: BaliseCoordinatesPrinterConfiguration.cpp  BaliseCoordinatesPrinterConfiguration.hpp  IncrementCabControlConfiguration.cpp  IncrementCabControlConfiguration.hpp  IncrementalCabControlConfiguration.cpp  IncrementalCabControlConfiguration.hpp  ListenerConfiguration.hpp  OpenRailsApiConfiguration.cpp  OpenRailsApiConfiguration.hpp  OpenRailsTrainBrakeConfiguration.cpp  OpenRailsTrainBrakeConfiguration.hpp  SimulationStateSendingConfiguration.cpp  SimulationStateSendingConfiguration.hpp  ThrottleAndDynBrakeControlConfiguration.cpp  ThrottleAndDynBrakeControlConfiguration.hpp
src/Core/: Application.cpp  Application.hpp  AsyncDeque.hpp  AsyncProperty.hpp  AsyncQueue.hpp  AsyncVector.hpp  ServiceContainer.cpp  ServiceContainer.hpp
src/Core/TopicWorker/: CANTopicWorker.cpp  CANTopicWorker.hpp  JsonTopicWorker.cpp  JsonTopicWorker.hpp  TopicWorker.cpp  TopicWorker.hpp
src/Enums/: CabControlType.hpp  DirectionLeverPosition.hpp  DrivingLeverPosition.hpp  EngineBrakeLeverPosition.hpp  ForwardLight.hpp  Increment.hpp  OpenRailsCabControlElement.hpp  OpenRailsControlElement.hpp  OpenRailsTrainBrakeState.hpp  PantographPosition.hpp  ServiceType.hpp  TrainBrake.hpp
src/MessageHandlers/: MessageHandler.hpp
src/MessageHandlers/CAN/: BatteryControlCANMessageHandler.cpp  BatteryControlCANMessageHandler.hpp  CANControlMessageHandler.cpp  CANControlMessageHandler.hpp  DirectionControlCANMessageHandler.cpp  DirectionControlCANMessageHandler.hpp  DrivingLeverCANMessageHandler.cpp  DrivingLeverCANMessageHandler.hpp
src/MessageHandlers/EVC/: ODOConfigMessageHandler.cpp  ODOConfigMessageHandler.hpp  ODOInitializationMessageHandler.cpp  ODOInitializationMessageHandler.hpp
src/MessageHandlers/LPC/: SimulationStatusMessageHandler.cpp  SimulationStatusMessageHandler.hpp
src/MessageHandlers/TIU/: TiuMessageHandler.cpp  TiuMessageHandler.hpp
src/Messages/: BatteryControlCANMessage.cpp  BatteryControlCANMessage.hpp  CANControlMessage.cpp  CANControlMessage.hpp  CANMessage.cpp  CANMessage.hpp  DirectionControlCANMessage.cpp  DirectionControlCANMessage.hpp  DrivingLeverCANMessage.cpp  DrivingLeverCANMessage.hpp  OrcToGuiMessage.cpp  OrcToGuiMessage.hpp
src/Services/: IInitializable.hpp  ILpcManagable.hpp  ILpcManageable.hpp  IService.hpp  IStartable.hpp  MqttService.cpp  MqttService.hpp
src/Services/BaliseCoordinatesPrinter/: BaliseCoordinatesPrinterService.cpp  BaliseCoordinatesPrinterService.hpp  IBaliseCoordinatesPrinterService.hpp
src/Services/BaliseData/: BaliseDataService.cpp  BaliseDataService.hpp  IBaliseDataService.hpp
src/Services/BalisesFromJson/: BalisesFromJsonService.cpp  BalisesFromJsonService.hpp  IBalisesFromJsonService.hpp
src/Services/Btm/: BtmService.cpp  BtmService.hpp  IBtmService.hpp
src/Services/Configuration/: ConfigurationService.hpp
src/Services/ConsoleInput/: ConsoleInputService.cpp  ConsoleInputService.hpp  IConsoleInputService.hpp
src/Services/ControllingOpenRails/CabControlApiService/: CabControlApiService.cpp  CabControlApiService.hpp  ICabControlApiService.hpp
src/Services/ControllingOpenRails/CabControlApiService/CabControlRequest/: CabControlRequest.cpp  CabControlRequest.hpp
src/Services/ControllingOpenRails/HumanControlData/: HumanControlDataService.cpp  HumanControlDataService.hpp  IHumanControlDataService.hpp
src/Services/ControllingOpenRails/IncrementalCabControlService/: IIncrementalCabControlService.hpp  IncrementalCabControlService.cpp  IncrementalCabControlService.hpp
src/Services/ControllingOpenRails/LocalCabControlsDataService/: ILocalCabControlsDataService.hpp  LocalCabControlsDataService.cpp  LocalCabControlsDataService.hpp
src/Services/ControllingOpenRails/MachineControlData/: IMachineControlDataService.hpp  MachineControlDataService.cpp  MachineControlDataService.hpp
src/Services/ControllingOpenRails/ThrottleAndDynBrakeControlService/: IThrottleAndDynBrakeControlService.hpp  ThrottleAndDynBrakeControlService.cpp  ThrottleAndDynBrakeControlService.hpp
src/Services/ControllingOpenRails/TrainControlUpdateService/: ITrainControlUpdateService.hpp  TrainControlUpdateService.cpp  TrainControlUpdateService.hpp
src/Services/Database/: DatabaseService.cpp  DatabaseService.hpp  IDatabaseService.hpp
src/Services/Database/Utils/: DatabaseQueries.hpp
src/Services/JRULogger/: JRULoggerService.hpp
src/Services/MachineControlData/: IMachineControlDataService.hpp  MachineControlDataService.cpp  MachineControlDataService.hpp
src/Services/MessageHandlersService/: IMessageHandlersService.hpp  MessageHandlersService.cpp  MessageHandlersService.hpp
src/Services/MqttListener/: IMqttListenerService.hpp  MqttListenerService.cpp  MqttListenerService.hpp
src/Services/MqttPublisher/: IMqttPublisherService.hpp  MqttPublisherService.cpp  MqttPublisherService.hpp
src/Services/SimulationStateApi/: ISimulationStateApiService.hpp  SimulationStateApiService.cpp  SimulationStateApiService.hpp
src/Services/SimulationStateData/: ISimulationStateDataService.hpp  SimulationStateDataService.cpp  SimulationStateDataService.hpp
src/Services/SimulationStateSender/: GuiSimulationStateSenderService.cpp  GuiSimulationStateSenderService.hpp  IGuiSimulationStateSenderService.hpp  IOdoToEvcSenderService.hpp  ISimulationStateSender.hpp  OdoToEvcSenderService.cpp  OdoToEvcSenderService.hpp
src/Services/Time/: ITimeService.hpp  TimeService.cpp  TimeService.hpp
src/Services/TrackData/: ITrackDataService.hpp  TrackDataService.cpp  TrackDataService.hpp
src/Services/TrainControlData/: ITrainControlDataService.hpp  TrainControlDataService.cpp  TrainControlDataService.hpp
src/Utils/: SimulationState.hpp
windows-libraries/cpr/: cpr.exp  cpr.lib  libcurl-d_imp.exp  libcurl-d_imp.lib  zlib.exp  zlib.lib
